# cmux

.github/workflows/: cmux-linux.yml
cmux-linux/: .gitignore  Cargo.toml  DESIGN.md  PARITY.md  README.md  ROADMAP.md
cmux-linux/crates/cmux-cli/: Cargo.toml
cmux-linux/crates/cmux-cli/src/: main.rs
cmux-linux/crates/cmux-config/: Cargo.toml
cmux-linux/crates/cmux-config/src/: lib.rs  shortcuts.rs
cmux-linux/crates/cmux-core/: Cargo.toml
cmux-linux/crates/cmux-core/src/: ids.rs  lib.rs  notification.rs  pane.rs  split.rs  tab.rs  workspace.rs
cmux-linux/crates/cmux-gui/: Cargo.toml
cmux-linux/crates/cmux-gui/src/: engine.rs  keys.rs  main.rs  palette.rs  render.rs
cmux-linux/crates/cmux-ipc/: Cargo.toml
cmux-linux/crates/cmux-ipc/src/: lib.rs  protocol.rs  transport.rs
cmux-linux/crates/cmux-pty/: Cargo.toml
cmux-linux/crates/cmux-pty/src/: lib.rs
cmux-linux/crates/cmux-term/: Cargo.toml
cmux-linux/crates/cmux-term/src/: lib.rs
cmux-linux/packaging/: build-rpm.sh  cmux-daemon.service  cmux.desktop  cmux.spec
