[package]
name = "cmux-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "The cmux-linux desktop application (Dioxus over WebKitGTK)."

[[bin]]
name = "cmux-gui"
path = "src/main.rs"

[dependencies]
cmux-core = { workspace = true }
cmux-config = { workspace = true }
cmux-term = { workspace = true }
cmux-pty = { workspace = true }
cmux-ipc = { workspace = true }
serde_json = { workspace = true }
dioxus = { version = "0.6", features = ["desktop"] }
tokio = { version = "1", features = ["time", "rt"] }
# System clipboard for terminal copy/paste; wayland-data-control adds native
# Wayland support alongside the default X11 backend.
arboard = { version = "3", features = ["wayland-data-control"] }
# Freedesktop (D-Bus) desktop notifications for the notification feed.
notify-rust = "4"

[dev-dependencies]
tempfile = "3"
